<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.belajar_android_pengenalan_material_design.activity.MainActivity">

    <item
        android:id="@+id/location"
        android:orderInCategory="100"
        android:title="@string/action_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/changePsw"
        android:orderInCategory="100"
        android:title="@string/action_changePassword"
        app:showAsAction="never" />


    <item
        android:id="@+id/about_developer"
        android:orderInCategory="100"
        android:title="@string/about_developer"
        app:showAsAction="never" />

    <item
        android:id="@+id/referenceInfo"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/action_Logout"
        app:showAsAction="never" />
</menu>
