<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/colorBackground_Splash_Screen"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/textView_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_Splash_Screen_Judul"
        android:textStyle="italic"
        android:textColor="@color/colorText_Splash_Screen"
        android:layout_marginTop="@dimen/TextView_marginTop_Splash_Screen"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="@dimen/Textview_marginBottom_Splash_Screen"
        android:text="@string/TextView_Splash_Screen_Judul"
        />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="@dimen/ImageView_Splash_Screen_width"
        android:layout_height="@dimen/ImageView_Splash_Screen_height"
        android:src="@drawable/stress"
        android:contentDescription="@string/ContentDescription_ImageView_SplashScreen"/>
    <TextView
        android:id="@+id/textView_sub_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_Splash_Screen_Sub_judul"
        android:textStyle="italic"
        android:textColor="@color/colorText_Splash_Screen"
        android:layout_marginTop="@dimen/TextView_marginTop_Splash_Screen"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/TextView_Splash_Screen_Sub_Judul"
        />
    <TextView
        android:id="@+id/textView_sub_sub_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_Splash_Screen_Sub_Sub_judul"
        android:textStyle="italic"
        android:textColor="@color/colorText_Splash_Screen"
        android:layout_marginTop="@dimen/Textview_marginTop_Splash_Screen_Sub_Sub_Judul"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/TextView_Splash_Screen_Sub_Sub_Judul"
        />
    <TextView
        android:id="@+id/textView_sub_sub_sub_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_Splash_Screen_Sub_Sub_Sub_Judul"
        android:textStyle="italic"
        android:textColor="@color/colorText_Splash_Screen"
        android:layout_marginTop="@dimen/Textview_marginTop_Splash_Screen_Sub_Sub_sub_Judul"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/TextView_Splash_Screen_Tingkat_Stres"
        />
    <TextView
        android:id="@+id/textView_sub_sub_sub_sub_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_Splash_Screen_Sub_Sub_Sub_Judul"
        android:textStyle="italic"
        android:textColor="@color/colorText_Splash_Screen"
        android:layout_marginTop="@dimen/Textview_marginTop_Splash_Screen_Sub_Sub_sub_Judul"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/TextView_Splash_Screen_Tingkat_Stres2"
        />
</LinearLayout>