<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layout_marginLeft_list_view"
        android:layout_marginTop="@dimen/layout_marginTop_list_view"
        android:layout_marginBottom="@dimen/layout_marginBottom_list_view"
        android:layout_marginRight="@dimen/layout_marginRight_list_View"
        android:layout_marginStart="@dimen/layout_marginLeft_list_view"
        android:layout_marginEnd="@dimen/layout_marginRight_list_View"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="@dimen/layout_width_ImageView"
            android:layout_height="@dimen/layout_height_ImageView"
            android:background="@drawable/icon"
            android:contentDescription="@string/ContentDescription_ImageView"
            />
        <TextView
            android:id="@+id/judul"
            android:text="@string/Judul_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop_TextView"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/layout_marginLeft_TextView"
            android:layout_marginStart="@dimen/layout_marginLeft_TextView"

            android:layout_toRightOf="@+id/thumbnail"
            android:layout_toEndOf="@+id/thumbnail"/>
        <TextView
            android:id="@+id/deskripsi"
            android:text="@string/Deskripsi_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft_TextView"
            android:layout_below="@+id/judul"
            android:layout_marginTop="@dimen/layout_marginTop_Text_View"
            android:layout_toRightOf="@+id/thumbnail"
            android:layout_marginStart="@dimen/layout_marginLeft_TextView"
            android:layout_toEndOf="@+id/thumbnail" />
    </RelativeLayout>
</FrameLayout>